# CordisChat

./: .gitignore  README.md  main.rs
relay/: Cargo.toml
relay/examples/: smoke.rs
relay/src/: main.rs  protocol.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt
src-tauri/src/: client.rs  crypto.rs  identity.rs
