[package]
name        = "pq-chat-relay"
version     = "0.1.0"
edition     = "2021"
description = "Minimal in-memory relay for the pq-chat client (dev/testing)"

[dependencies]
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util      = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
uuid              = { version = "1", features = ["v4", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
base64            = "0.22"
rand              = "0.8"
